# fulgor

./: .gitignore  Cargo.toml  Fulgor_Project_Structure.md  LICENSE-APACHE  README.md
crates/agora/: Cargo.toml
crates/atrium/: Cargo.toml
crates/forge/: Cargo.toml
crates/forge/benches/: memory_performance.rs
crates/forge/examples/: architecture_aware_usage.rs  basic_pool_usage.rs  improved_performance_comparison.rs  performance_comparison.rs  test_optimized_pool.rs
crates/forge/src/: lib.rs
crates/forge/src/memory/: mod.rs  optimized_pool.rs  pool.rs  stats.rs
crates/forge/tests/: integration_tests.rs
crates/fulgor/: Cargo.toml
crates/fulgor/src/: lib.rs
crates/lights/: Cargo.toml
crates/lights/examples/: async_channel_usage.rs  basic_usage.rs  buffered_async_sender_usage.rs  factory_demo.rs  renderer_usage.rs
crates/lights/src/: lib.rs
crates/lights/src/numerics/: mod.rs
crates/lights/src/numerics/types/: point.rs
crates/lights/src/renderer/: capabilities.rs  manager.rs  prelude.rs
crates/lights/src/renderer/async_communication/: mod.rs  receiver.rs  sender.rs
crates/lights/src/renderer/async_communication/async_channel/: configuration.rs
crates/lights/src/renderer/custom/: opengl.rs
crates/lights/src/renderer/world/: mod.rs  scene.rs
crates/lights/src/scene/: graph.rs  primitive.rs
crates/nexus/: Cargo.toml
crates/optical/: Cargo.toml
docs/: Actions.md
examples/: async_channel_usage.rs  basic_usage.rs  buffered_async_sender_usage.rs  factory_demo.rs  renderer_usage.rs
src/: lib.rs
src/numerics/types/: matrix.rs  point.rs  traits.rs  vector.rs
src/renderer/: factory.rs  manager.rs  mod.rs  prelude.rs
src/renderer/async_communication/: mod.rs  receiver.rs  sender.rs  tokio_enhanced.rs  types.rs
src/renderer/async_communication/async_channel/: configuration.rs  mod.rs
src/renderer/cpu_reference/: mod.rs  reference.rs
src/renderer/custom/: mod.rs  opengl3.rs
src/renderer/gpu_optional/: backend.rs  mod.rs
src/renderer_cpu_ref/: mod.rs
src/scene/: mod.rs
tests/: integration_tests.rs
tests/integration/: factory_management.rs  renderer_lifecycle.rs
