[package]
name = "fulgor"
version = "0.1.0"
edition = "2021"
description = "A modular 3D rendering engine centered around Gaussian splatting primitives."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/fulgor"

[lib]
name = "fulgor"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
bincode = "2.0.1"
image = "0.25.8"
tokio = { version = "1.47.1", features = ["full"], optional = true }

# wgpu optional; enabled when the "gpu" feature is selected.
wgpu = { version = "26.0.1", optional = true }
futures = "0.3.31"
async-channel = "2.5.0"

[features]
# "gpu" feature enables wgpu
gpu = ["wgpu"]
default = []
async = ["tokio"]
tokio-runtime = ["tokio"]
tokio-timeout = ["tokio"]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }

[[example]]
name = "async_channel_usage"
required-features = ["async"]

[[example]]
name = "basic_usage"