[package]
name = "forge"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/fulgor"
description = "LLVM-based code generation for Fulgor IDE"

[dependencies]
nexus = { path = "../nexus" }
anyhow = "1.0"