[package]
name = "fulgor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/fulgor"
description = "Revolutionary node-based IDE with visual programming"

[dependencies]
# All internal crates
nexus = { path = "../nexus" }
forge = { path = "../forge" }
lights = { path = "../lights" }
agora = { path = "../agora" }
optical = { path = "../optical" }
atrium = { path = "../atrium" }