[package]
name = "lights"
version = "0.1.0"
edition = "2021"
description = "A modular 3D rendering engine centered around Gaussian splatting primitives."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/fulgor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fulgor"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
bincode = "2.0.1"
image = "0.25.8"
tokio = { version = "1.47.1", features = ["full"], optional = true }

# Workspace dependencies
nexus.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# wgpu optional; enabled when the "gpu" feature is selected.
wgpu = { version = "26.0.1", optional = true }
futures = "0.3.31"
async-channel = "2.5.0"
num_cpus = "1.17.0"

[features]
# "gpu" feature enables wgpu
gpu = ["wgpu"]
default = ["tokio-support"]
async = ["tokio"]
tokio-runtime = ["tokio"]
tokio-timeout = ["tokio"]
tokio-support = ["tokio"]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-test = "0.4"

[[example]]
name = "async_channel_usage"
required-features = ["async"]

[[example]]
name = "basic_usage"
