[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/fulgor"
description = "Node-based execution engine for Fulgor IDE"

[dependencies]
# Minimal for basic structure
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"