[package]
name = "optical"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/fulgor"
description = "UI component library for Fulgor IDE"

[dependencies]
lights = { path = "../lights" }
anyhow = "1.0"